--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  /*"Plugins":["react-hot-loader/babel"]*/
+  "Plugins":["react-hot-loader/babel"]
 }
