--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "reactDev": "node server",
-    "dev":"webpack-dev-server --color --open --hot --inline --contentBase ./src"
+    "dev":"webpack-dev-server --color --open --hot --inline --content-base ./src"
   },
   "author": "Hal",
   "license": "ISC",
