--- a/package.json
+++ b/package.json
@@ -4,27 +4,53 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "reactDev": "node server",
-    "dev":"webpack-dev-server --color --open --hot --inline --contentBase ./src"
+    "bundle": "webpack --config webpack.config.pro.js",
+    "dev": "webpack-dev-server --config webpack.config.dev.js",
+    "test": "jest"
   },
   "author": "Hal",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.22.2",
     "babel-core": "^6.18.2",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "css-loader": "^0.25.0",
-    "node-sass": "^3.11.1",
-    "postcss-loader": "^1.1.0",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "sass-loader": "^4.0.2",
+    "babel-plugin-import": "^1.1.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "jest": "^19.0.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "node-sass": "^4.5.2",
+    "react-hot-loader": "3.0.0-beta.6",
+    "regenerator-runtime": "^0.10.3",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "babel-polyfill": "^6.23.0",
+    "antd": "^2.9.0",
+    "mobx": "^3.1.0",
+    "mobx-react": "^4.1.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-lazy-load": "^3.0.11",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.14.3",
+    "whatwg-fetch": "^2.0.3"
   }
 }
